<resources>
    <string name="app_name">Capstone Reisplanner</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="station">Station</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="search">Search</string>
    <string name="divider"> <![CDATA[ -> ]]> </string>
    <string name="transfers">Transfers: </string>
    <string name="travel_duration">travel_duration</string>
    <string name="arrival_time">arrival_time</string>
    <string name="departure_time">departure_time</string>
    <string name="arrow">arrow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="activate">Activate</string>
    <string name="saveIcon">SaveIcon</string>
    <string name="track">Track: </string>
    <string name="statistics">Statistics</string>
    <string name="hours_traveled">Hours traveled: </string>
    <string name="most_visited_station">Most visited station: </string>
    <string name="most_traveled">Most traveled: </string>
    <string name="history">History</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_on_map">View on map</string>
    <string name="settings_button">Settings button</string>
    <string name="current_active_trip">Current active trip :</string>
    <string name="favorite_trip">Favorite Trip</string>
</resources>