<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/favorite_trip"
    android:layout_width="410dp"
    android:layout_height="200dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/favorite_trip"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="220dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view24"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1" />

            <androidx.cardview.widget.CardView
                android:layout_width="390dp"
                android:layout_height="220dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/view21"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:text="@string/from" />

                            <View
                                android:id="@+id/view32"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/tv_favorite_from"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:text="@string/from" />

                            <View
                                android:id="@+id/view22"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:text="@string/to" />

                            <View
                                android:id="@+id/view33"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/tv_favoriteto"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:text="@string/to" />

                            <View
                                android:id="@+id/view23"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_weight="1" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:orientation="horizontal">

                        <View
                            android:id="@+id/view27"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rc_favorite_trips"
                            android:layout_width="370dp"
                            android:layout_height="200dp"
                            android:layout_weight="0" />

                        <View
                            android:id="@+id/view26"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/view25"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>